# Zephyr-Dev-Container-Template

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: CMakeLists.txt  codecheck_skip.txt  codechecker.json  west.yml
app/sysbuild/: sysbuild.conf
app/sysbuild/app/boards/: nucleo_l552ze_q.overlay  nucleo_u575zi_q.overlay
app/sysbuild/mcuboot/: prj.conf
app/sysbuild/mcuboot/boards/: nucleo_l552ze_q.conf  nucleo_u575zi_q.conf
app_tests/: CMakeLists.txt  main.c  prj.conf  proto  testcase.yaml
scripts/: gdbPipeListener.sh  init.sh  nulinkPipeListener.sh  pipe_vars.sh  runGdbServer.sh  runNulinkCMD.sh
